--- a/package.json
+++ b/package.json
@@ -4,14 +4,24 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
+    "concurrently": "^4.1.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "helmet": "^3.21.3",
     "mongoose": "^5.11.15",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "react-router-dom": "^5.1.2",
+    "@types/react-redux": "^7.0.3",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.5",
+    "session-file-store": "^1.4.0"
   },
   "devDependencies": {},
   "scripts": {
