--- a/perfume/package.json
+++ b/perfume/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "jquery": "^3.5.1",
