--- a/perfume/package.json
+++ b/perfume/package.json
@@ -28,6 +28,8 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^3.1.1",
+    "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
