--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "session-file-store": "^1.4.0"
+    "session-file-store": "^1.4.0",
+    "socket.io": "^3.1.1",
+    "socket.io-client": "^3.1.1"
   },
   "devDependencies": {},
   "scripts": {
